--- a/tamuhackAA/app/src/main/res/layout/activity_baggage.xml
+++ b/tamuhackAA/app/src/main/res/layout/activity_baggage.xml
@@ -15,7 +15,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/sign_up_flow_button"
         android:text="Verify Check-In"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
